[gd_scene load_steps=5 format=2]

[ext_resource path="res://debug/DebugBuilding.gd" type="Script" id=1]
[ext_resource path="res://decorations/CityLight.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]

[node name="DebugBuilding" type="Spatial"]
script = ExtResource( 1 )

[node name="Box" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="+X+Z" parent="." instance=ExtResource( 2 )]

[node name="+X-Z" parent="." instance=ExtResource( 2 )]

[node name="-X+Z" parent="." instance=ExtResource( 2 )]

[node name="-X-Z" parent="." instance=ExtResource( 2 )]

[node name="Vis" type="VisibilityNotifier" parent="."]

[connection signal="screen_entered" from="Vis" to="." method="_on_Vis_screen_entered"]
[connection signal="screen_exited" from="Vis" to="." method="_on_Vis_screen_exited"]
